completet login/signup functionality

--- a/app/views/home.hbs
+++ b/app/views/home.hbs
@@ -2,7 +2,7 @@
 
 <section class="ui raised segment">
 
-    <!--{{> donate }}-->
+    <!--timeline partial here-->
 
     <div class="ui  divider"></div>
 
