--- a/app/views/partials/mainmenu.hbs
+++ b/app/views/partials/mainmenu.hbs
@@ -1,9 +1,9 @@
 <nav class="ui blue inverted menu">
-    <header class="header item"><a href="/"> Donation </a></header>
+    <header class="header item"><a href="/home"> Zwitscher </a></header>
     <div class="right menu">
-        <a id="home"   class= "item" href="/home"> Donate</a>
-        <a id="report" class= "item" href="/report"> Report</a>
-        <a id="settings" class= "item" href="/settings"> Settings</a>
+        <!--<a id="home"   class= "item" href="/home"> Donate</a>-->
+        <!--<a id="report" class= "item" href="/report"> Report</a>-->
+        <!--<a id="settings" class= "item" href="/settings"> Settings</a>-->
         <a id="logout" class= "item" href="/logout"> Logout</a>
     </div>
 </nav>
