added api and unit tests for user

--- a/app/views/main.hbs
+++ b/app/views/main.hbs
@@ -3,7 +3,7 @@
 <section class="ui stacked segment">
     <div class="ui grid">
         <aside class="six wide column">
-            <img src="images/twitter_512_512.png" class="ui medium image">
+            <img src="images/zwitscherIcons/zwitscher_512_512.png" class="ui medium image">
         </aside>
         <article class="ten wide column">
             <header class="ui  header"> Welcome to Zwitscher</header>
