--- a/app/views/partials/welcomemenu.hbs
+++ b/app/views/partials/welcomemenu.hbs
@@ -1,4 +1,4 @@
-<nav class="ui blue inverted menu">
+<nav class="ui brown menu">
     <header class="header item"> <a href="/"> Zwitscher </a> </header>
     <div class="right menu">
 
