--- a/app/views/login.hbs
+++ b/app/views/login.hbs
@@ -3,7 +3,7 @@
 <section class="ui raised segment">
     <div class="ui grid">
         <aside class="ui six wide column">
-            <img src="images/twitter_256_256.png" class="ui medium image">
+            <img src="images/zwitscherIcons/zwitscher_512_512.png" class="ui medium image">
         </aside>
         <div class="ui ten wide column fluid form">
             <div class="ui stacked segment">
@@ -15,7 +15,7 @@
                     <div class="field">
                         <label>Password</label> <input placeholder="Password" type="password" name="password">
                     </div>
-                    <button class="ui blue submit button">Login</button>
+                    <button class="ui brown submit button">Login</button>
                 </form>
                 {{> formerror}}
             </div>
