--- a/app/views/partials/mainmenu.hbs
+++ b/app/views/partials/mainmenu.hbs
@@ -1,4 +1,4 @@
-<nav class="ui blue inverted menu">
+<nav class="ui brown menu">
     <header class="header item"><a href="/home"> Zwitscher </a></header>
     <div class="right menu">
         <!--<a id="home"   class= "item" href="/home"> Donate</a>-->
