--- a/app/views/main.hbs
+++ b/app/views/main.hbs
@@ -1,13 +1,13 @@
 {{> welcomemenu }}
 
-<section class="ui stacked segment">
-    <div class="ui grid">
-        <aside class="six wide column">
-            <img src="images/zwitscherIcons/zwitscher_512_512.png" class="ui medium image">
-        </aside>
-        <article class="ten wide column">
-            <header class="ui  header"> Welcome to Zwitscher</header>
-            <p> Share your thoughts with everyone! </p>
-        </article>
+<section class="ui basic segment">
+    <div class="ui middle aligned center aligned grid">
+      <aside class="six wide column">
+        <img src="images/zwitscherIcons/zwitscher_512_512.png" class="ui medium image">
+      </aside>
+      <article class="six wide column">
+        <header class="ui  header"> Welcome to Zwitscher</header>
+        <p> Share your thoughts with everyone! </p>
+      </article>
     </div>
 </section>
