--- a/app/views/partials/formerror.hbs
+++ b/app/views/partials/formerror.hbs
@@ -1,6 +1,6 @@
 {{#if errors}}
     <div class="ui negative message transition">
-        <i class="close icon"></i>
+        <!--<i class="close icon"></i>-->
         <div class="header">
             There was some errors with your submission
         </div>
