added userTimelines and updated api to get all tweets by user

--- a/app/views/home.hbs
+++ b/app/views/home.hbs
@@ -1,43 +1,43 @@
 {{> mainmenu _id="home" }}
 
-<section class="ui centered stackable grid">
+<!--<section class="ui centered stackable grid">-->
 
-  <div class="ui eleven wide stacked column">
-    {{> postTweet }}
-    <div class="ui stackable two cards">
-    {{#each tweets}}
-      {{> tweet }}
-    {{/each}}
-    </div>
-  </div>
+  <!--<div class="ui eleven wide stacked column">-->
+    <!--{{> postTweet }}-->
+    <!--<div class="ui stackable two cards">-->
+    <!--{{#each tweets}}-->
+      <!--{{> tweet }}-->
+    <!--{{/each}}-->
+    <!--</div>-->
+  <!--</div>-->
 
-  <div class="ui four wide column">
-    <div class="ui card">
-      <div class="image">
-        <img src="{{user.profilePicture}}">
-      </div>
-      <div class="content">
-        <div class="header">{{user.firstName}} {{user.lastName}}</div>
-        <!--<div class="meta">-->
-          <!--<a>Friends</a>-->
-        <!--</div>-->
-        <!--<div class="description">-->
-          <!--Matthew is an interior designer living in New York.-->
-        <!--</div>-->
-        <div class="description">
-          joined {{user.joinedString}}
-        </div>
-      </div>
-      <!--<div class="extra content">-->
-        <!--<span class="right floated">-->
-          <!--joined {{user.joined}}-->
-        <!--</span>-->
-        <!--<span>-->
-          <!--<i class="user icon"></i>-->
-          <!--75 Friends-->
-        <!--</span>-->
+  <!--<div class="ui four wide column">-->
+    <!--<div class="ui card">-->
+      <!--<div class="image">-->
+        <!--<img src="{{user.profilePicture}}">-->
       <!--</div>-->
-    </div>
-  </div>
+      <!--<div class="content">-->
+        <!--<div class="header">{{user.firstName}} {{user.lastName}}</div>-->
+        <!--&lt;!&ndash;<div class="meta">&ndash;&gt;-->
+          <!--&lt;!&ndash;<a>Friends</a>&ndash;&gt;-->
+        <!--&lt;!&ndash;</div>&ndash;&gt;-->
+        <!--&lt;!&ndash;<div class="description">&ndash;&gt;-->
+          <!--&lt;!&ndash;Matthew is an interior designer living in New York.&ndash;&gt;-->
+        <!--&lt;!&ndash;</div>&ndash;&gt;-->
+        <!--<div class="description">-->
+          <!--joined {{user.joinedString}}-->
+        <!--</div>-->
+      <!--</div>-->
+      <!--&lt;!&ndash;<div class="extra content">&ndash;&gt;-->
+        <!--&lt;!&ndash;<span class="right floated">&ndash;&gt;-->
+          <!--&lt;!&ndash;joined {{user.joined}}&ndash;&gt;-->
+        <!--&lt;!&ndash;</span>&ndash;&gt;-->
+        <!--&lt;!&ndash;<span>&ndash;&gt;-->
+          <!--&lt;!&ndash;<i class="user icon"></i>&ndash;&gt;-->
+          <!--&lt;!&ndash;75 Friends&ndash;&gt;-->
+        <!--&lt;!&ndash;</span>&ndash;&gt;-->
+      <!--&lt;!&ndash;</div>&ndash;&gt;-->
+    <!--</div>-->
+  <!--</div>-->
 
-</section>
+<!--</section>-->
