--- a/app/views/partials/mainmenu.hbs
+++ b/app/views/partials/mainmenu.hbs
@@ -2,8 +2,8 @@
 
 <nav class="ui secondary brown menu">
     <!--<header class="header item"><a href="/home"> Zwitscher </a></header>-->
-    <a class="item" href="/home">
-      <img class="ui image" src="images/zwitscherIcons/zwitscher_20_20.png">
+    <a class="item" href="/userTimeline/{{loggedInUserID}}">
+      <img class="ui image" src="/images/zwitscherIcons/zwitscher_20_20.png">
     </a>
     <div class="right menu">
         <!--<a id="home"   class= "item" href="/home"> Donate</a>-->
