--- a/app/views/login.hbs
+++ b/app/views/login.hbs
@@ -10,7 +10,7 @@
             <form action="/login" method="POST">
                 <h3 class="ui header">Log-in</h3>
                 <div class="field">
-                    <label>Email</label> <input placeholder="Email" type="text" name="email">
+                    <label>Email</label> <input placeholder="Email" type="text" name="email" value="{{user.email}}">
                 </div>
                 <div class="field">
                     <label>Password</label> <input placeholder="Password" type="password" name="password">
