--- a/app/views/userTimeline.hbs
+++ b/app/views/userTimeline.hbs
@@ -12,33 +12,9 @@
   </div>
 
   <div class="ui four wide column">
-    <div class="ui raised card">
-      <div class="image">
-        <img src="{{user.profilePicture}}">
-      </div>
-      <div class="content">
-        <div class="header">{{user.firstName}} {{user.lastName}}</div>
-        <!--<div class="meta">-->
-          <!--<a>Friends</a>-->
-        <!--</div>-->
-        <!--<div class="description">-->
-          <!--Matthew is an interior designer living in New York.-->
-        <!--</div>-->
-        <div class="description">
-          joined {{user.joinedString}}
-        </div>
-      </div>
-      <!--<div class="extra content">-->
-        <!--<span class="right floated">-->
-          <!--joined {{user.joined}}-->
-        <!--</span>-->
-        <!--<span>-->
-          <!--<i class="user icon"></i>-->
-          <!--75 Friends-->
-        <!--</span>-->
-      <!--</div>-->
-    </div>
-    {{> userList }}
+    {{#with user}}
+      {{> userCard }}
+    {{/with}}
   </div>
 
 </section>
