--- a/app/views/home.hbs
+++ b/app/views/home.hbs
@@ -1,7 +1,7 @@
 {{> mainmenu _id="home" }}
 
-<div class="ui four stackable link cards">
-  {{#each users}}
-    {{> userCard }}
-  {{/each}}
-</div>
+<!--<div class="ui four stackable link cards">-->
+  <!--{{#each users}}-->
+    <!--{{> userCard }}-->
+  <!--{{/each}}-->
+<!--</div>-->
