--- a/app/views/partials/mainmenu.hbs
+++ b/app/views/partials/mainmenu.hbs
@@ -2,8 +2,11 @@
 
 <nav class="ui secondary brown menu">
     <!--<header class="header item"><a href="/home"> Zwitscher </a></header>-->
-    <a class="item" href="/home">
+    <a class="item" href="/globalTimeline">
       <img class="ui mini image" src="/images/zwitscherIcons/zwitscher_48_48.png">
+    </a>
+    <a class="item" href="/users">
+      <img class="ui mini image" src="/images/profilePictures/usersCircular.jpg">
     </a>
     <a class="item" href="/userTimeline/{{loggedInUser._id}}">
         <img class="ui mini circular image" src="{{loggedInUser.profilePicture}}">
