--- a/app/views/partials/postTweet.hbs
+++ b/app/views/partials/postTweet.hbs
@@ -1,6 +1,6 @@
 {{#if canPost}}
   <div class="ui fluid raised card">
-    <form class="ui form" id="tweetForm" action="/postTweet" method="post" enctype='multipart/form-data'>
+    <form class="ui form" id="tweetForm" action="/{{timeLine}}/postTweet" method="post" enctype='multipart/form-data'>
     <div class="ui fluid raised card">
       <div class="extra content">
         <div class="left floated author">
