added hash arguments to tweet and postTweet partials

--- a/app/views/globalTimeline.hbs
+++ b/app/views/globalTimeline.hbs
@@ -3,10 +3,10 @@
 <section class="ui centered stackable grid">
 
   <div class="ui eleven wide stacked column">
-    {{> postTweet }}
+    {{> postTweet displayedTimeline='globalTimeline' }}
     <div class="ui fluid stackable cards">
       {{#each tweets}}
-        {{> tweet }}
+        {{> tweet tweet=this displayedTimeline='globalTimeline' }}
       {{/each}}
     </div>
   </div>
