--- a/app/views/userTimeline.hbs
+++ b/app/views/userTimeline.hbs
@@ -3,10 +3,10 @@
 <section class="ui centered stackable grid">
 
   <div class="ui eleven wide stacked column">
-    {{> postTweet }}
+    {{> postTweet displayedTimeline='userTimeline' }}
     <div class="ui stackable two cards">
-    {{#each tweets}}
-      {{> tweet }}
+    {{#each tweets }}
+      {{> tweet tweet=this displayedTimeline='userTimeline' }}
     {{/each}}
     </div>
   </div>
