--- a/app/views/partials/postTweet.hbs
+++ b/app/views/partials/postTweet.hbs
@@ -7,7 +7,7 @@
           <img class="ui avatar image" src="{{user.profilePicture}}"> {{user.firstName}} {{user.lastName}}
         </div>
         <div class="right floated">
-          <div class="ui icon button" id="camerabutton" data-tooltip="Add a picture to your babble" data-inverted="">
+          <div class="ui icon button" id="camerabutton">
             <i class="camera icon"></i></div>
           <button class="ui brown submit button">Post</button>
         </div>
@@ -30,40 +30,5 @@
     </div>
     </form>
   </div>
-  <script>
-    $(document).ready(function () {
-
-      $('#tweetForm #camerabutton')
-          .on('click', function (e) {
-            $('#tweetForm #fileInput', $(e.target).parents()).click();
-          });
-
-      $('#tweetForm #fileInput').on('change', function (input) {
-        var preview = $('#tweetForm #imagePreview');
-        if (this.files && this.files[0]) {
-          var reader = new FileReader();
-          reader.onload = function (e) {
-            $('#tweetForm #imagePreview').attr('src', e.target.result);
-            $('#imageSegment').attr("style", "display: block");
-          }
-          reader.readAsDataURL(this.files[0]);
-        } else {
-          $('#tweetForm #imagePreview').removeAttr('src');
-          $('#imageSegment').attr("style", "display: none");
-        }
-      });
-
-      $('#tweetForm #imagePreview')
-          .on('click', function (e) {
-            var control = $("#tweetForm #fileInput");
-            control.replaceWith(control.val('').clone(true));
-            $('#tweetForm #imagePreview').removeAttr('src');
-            $('#imageSegment').attr("style", "display: none");
-          });
-
-      $('#tweetForm').on('submit', function () {
-        $('#tweetForm').addClass('loading disabled');
-      });
-    });
-  </script>
+  <script src="/scripts/postTweet.js"></script>
 {{/if}}
